# spyfy

./: .env.example  .gitignore  0.18  AD_LIBRARY_COMPETITOR_INTEL.md  README.md  cf.err  docker-compose.yml  package.json  realtime_url.txt  render.yaml  rt_client.mjs  vercel.json
apps/workers-py/: .dockerignore  .vercelignore  0.4.11  Dockerfile  _import_check.py  _live_check.py  _pytest_out.txt  docker-compose.yml  generate_fb_cookies.py  pyproject.toml  requirements.docker.txt  requirements.txt  run_fleet.py  validate_endpoints.ps1  vercel.json
apps/workers-py/api/: index.py
apps/workers-py/cache/: _meta_probe.html  meta_keto.json  native_keto.json  pinterest_keto.json  real_ads.json  tiktok_keto.json  youtube_keto.json
apps/workers-py/examples/: notify_demo.py  stack_detector_demo.py
apps/workers-py/scripts/: populate_real_ads.py  test_headers.py  test_meta_scrape.py  validate_media.py
apps/workers-py/spyfy/: __init__.py  ad_fleet.py  browser_scraper.py  cart.py  channels.py  clone.py  crm.py  digest.py  events.py  gamification.py  google_library.py  meta_library.py  native_library.py  notifications.py  notifiers.py  offers_service.py  personalization.py  proxy_pool.py  radar.py  real_ads_store.py  realtime_producer.py  retention.py  roi.py  scraper_bridge.py  scrapling_adapter.py  tiktok_library.py  tiktok_trends_source.py  webhooks.py
apps/workers-py/tests/: test_agents_memory.py  test_agents_orchestrator.py  test_api.py  test_channels.py  test_events.py  test_features.py  test_google_library.py  test_meta_library.py  test_native_library.py  test_roi.py  (+8 more)
(+189 files in other folders)
