[project]
name = "spyfy-workers"
version = "0.1.0"
description = "SpyFy Python workers: mining (browser+library), enrichment, IA agents e Scale/ROI engine."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44",
  "httpx>=0.27",
  "tenacity>=8.3",
  "langgraph>=0.2",
  "langchain>=0.2",
  "langchain-anthropic>=0.1",
  "langchain-openai>=0.1",
  "pydantic>=2.7",
  "openai-whisper>=20231117",
  "chromadb>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "black>=24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spyfy"]

[[tool.mypy.overrides]]
# apprise e' importado localmente (runtime opcional) e nao possui stubs
module = "apprise"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# chromadb possui py.typed parcial; evita ruido de tipos internos
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# sentence-transformers e' importado localmente (runtime opcional)
module = "sentence_transformers"
ignore_missing_imports = true

